# congress-tweets-meet-sae

./: .gitignore  README.md  config.yaml  data.dvc  download.py  embed.py  pyproject.toml  regressions.R  train.py
.dvc/: config
sae/: config.yaml  inference.py  model.py  runs.dvc  train.py
scripts/: download.py  embed.py  interpret.py  regressions.R  sync.py  visualize.py
thesis/: pictures.py
thesis/tex/: main.tex
