[project]
name = "congress-tweets-meet-sae"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "requests",
    "nomic",
    "pyreadr",
]

[project.optional-dependencies]
gpu = ["torch", "transformers"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }