[project]
name = "congress-tweets-meet-sae"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "requests",
    "nomic",
    "pyreadr",
    "h5py"
]

[project.optional-dependencies]
gpu = ["torch", "transformers", "tensorboard", "torch-tb-profiler", "unique-namer"]
notebook = ["jupyter", "notebook"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }