[project]
name = "congress-tweets-meet-sae"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "requests",
    "nomic",
    "pyreadr",
    "h5py",
    "huggingface_hub",
    "hf_transfer",
    "jupyter",
    "notebook",
    "rich",
    "captum",
    "torch", 
    "transformers", 
    "tensorboard", 
    "torch-tb-profiler", 
    "unique-namer"
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project.scripts]
hfsync = "scripts.hfsync:main"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }